--- a/settings.html
+++ b/settings.html
@@ -57,6 +57,8 @@
     .btn.primary { background: #22c55e; color: #0f172a; }
     .actions { display: flex; gap: 10px; flex-wrap: wrap; align-items: center; }
     .status { font-size: 0.95rem; color: var(--muted); min-height: 20px; }
+    .note { font-size: 0.9rem; color: var(--muted); }
+    .app-footer { text-align: center; padding: 16px 0 24px; font-size: 0.95rem; color: var(--muted); }
 
     @media (max-width: 980px) {
       .app-layout { flex-direction: column; }
@@ -102,8 +104,8 @@
       <header>
         <div class="shell">
           <div class="top-row"></div>
-          <h1>Settings</h1>
-          <p class="muted">Update the company information used in records and exports.</p>
+          <h1>Settings (Scope 2 electricity, tCO₂e — location-based + market-based)</h1>
+          <p class="muted">Update the company information used in Scope 2 electricity records and exports (tCO₂e).</p>
         </div>
       </header>
 
@@ -125,13 +127,14 @@
               </div>
             </div>
             <div>
-              <label for="company-reporting-year">Reporting year preference</label>
+              <label for="company-reporting-year">Reporting year preference (Scope 2 electricity)</label>
               <select id="company-reporting-year">
                 <option value="all">All years</option>
                 <option value="current">Current year</option>
                 <option value="previous">Previous year</option>
               </select>
             </div>
+            <p class="note">These preferences set defaults for Scope 2 electricity reporting views.</p>
             <div class="actions">
               <button class="btn primary" type="submit">Save changes</button>
               <span class="status" id="settings-status"></span>
@@ -139,6 +142,11 @@
           </form>
         </section>
       </div>
+      <footer class="app-footer">
+        <!-- Trust signals in footer: methodology, support, and factor freshness -->
+        <div><a href="methodology.html">Methodology</a> • <a href="mailto:hello@esgrise.com">Contact / support</a></div>
+        <div>Emission factors updated as of 2024.</div>
+      </footer>
     </div>
   </div>
 
