--- a/insights.html
+++ b/insights.html
@@ -69,6 +69,8 @@
     .bar-fill { height: 100%; background: #94a3b8; border-radius: 999px; }
     .status { font-size: 0.95rem; color: var(--muted); min-height: 20px; }
     .empty { color: var(--muted); font-size: 0.95rem; padding: 8px 0; }
+    .note { color: var(--muted); font-size: 0.9rem; }
+    .app-footer { text-align: center; padding: 16px 0 24px; font-size: 0.95rem; color: var(--muted); }
 
     @media (max-width: 980px) {
       .app-layout { flex-direction: column; }
@@ -112,8 +114,8 @@
       <header>
         <div class="shell">
           <div class="top-row"></div>
-          <h1>Insights</h1>
-          <p class="muted">Monthly trends and regional contributors based on your saved records.</p>
+          <h1>Insights (Scope 2 electricity, tCO₂e — location-based)</h1>
+          <p class="muted">Monthly trends and regional contributors based on saved Scope 2 electricity records (tCO₂e, location-based).</p>
         </div>
       </header>
 
@@ -121,7 +123,7 @@
         <section class="card">
           <div class="filters">
             <div>
-              <label for="insightYear">Reporting year</label>
+              <label for="insightYear">Reporting year (Scope 2 electricity)</label>
               <select id="insightYear">
                 <option value="">All years</option>
               </select>
@@ -131,7 +133,7 @@
         </section>
 
         <section class="card stack">
-          <h3 style="margin:0;">Monthly emissions trend</h3>
+          <h3 style="margin:0;">Monthly Scope 2 electricity trend (tCO₂e, location-based)</h3>
           <p class="subtitle">Location-based Scope 2 (tCO₂e) • Saved records only • Estimates</p>
           <div class="chart-wrap">
             <div class="metric" id="trendTotal">—<span class="unit">tCO₂e</span></div>
@@ -143,25 +145,33 @@
               <path id="trendPath" d=""></path>
             </svg>
             <div class="subtitle" id="trendRange">Monthly totals based on saved records</div>
-            <div class="empty" id="trendEmpty" style="display:none;">No electricity data available for this period. Add records to see insights.</div>
+            <div class="empty" id="trendEmpty" style="display:none;">No electricity records found for this period. Add a record to include it in calculations and exports.</div>
           </div>
+          <div class="note">Calculated using location-based Scope 2 electricity factors (tCO₂e). <a href="methodology.html">See Methodology</a>.</div>
         </section>
 
         <section class="card stack">
-          <h3 style="margin:0;">Regional contribution</h3>
+          <h3 style="margin:0;">Regional contribution (Scope 2 electricity, location-based, tCO₂e)</h3>
           <p class="subtitle">Location-based Scope 2 (tCO₂e) • Saved records only • Estimates</p>
           <div class="ranked-list" id="regionList"></div>
-          <div class="empty" id="regionEmpty" style="display:none;">No electricity data available for this period. Add records to see insights.</div>
+          <div class="empty" id="regionEmpty" style="display:none;">No electricity records found for this period. Add a record to include it in calculations and exports.</div>
+          <div class="note">Calculated using location-based Scope 2 electricity factors (tCO₂e). <a href="methodology.html">See Methodology</a>.</div>
         </section>
 
         <section class="card stack">
-          <h3 style="margin:0;">Data coverage</h3>
+          <h3 style="margin:0;">Data coverage (Scope 2 electricity records, months)</h3>
           <p class="subtitle">Months with saved records • Location-based Scope 2 • Estimates</p>
           <div class="metric" id="coverageCount">—</div>
           <div class="subtitle" id="coverageNote">Coverage based on saved records only</div>
-          <div class="empty" id="coverageEmpty" style="display:none;">No electricity data available for this period. Add records to see insights.</div>
+          <div class="empty" id="coverageEmpty" style="display:none;">No electricity records found for this period. Add a record to include it in calculations and exports.</div>
+          <div class="note">Calculated using location-based Scope 2 electricity factors (tCO₂e). <a href="methodology.html">See Methodology</a>.</div>
         </section>
       </div>
+      <footer class="app-footer">
+        <!-- Trust signals in footer: methodology, support, and factor freshness -->
+        <div><a href="methodology.html">Methodology</a> • <a href="mailto:hello@esgrise.com">Contact / support</a></div>
+        <div>Emission factors updated as of 2024.</div>
+      </footer>
     </div>
   </div>
 
@@ -245,7 +255,9 @@
     };
 
     const populateYears = (records) => {
-      const years = Array.from(new Set(records.map((r) => r.period_year))).filter(Boolean).sort((a, b) => b - a);
+      const years = Array.from(new Set(records.map((r) => r.period_year))).filter(Boolean);
+      if (!years.includes(CURRENT_YEAR)) years.push(CURRENT_YEAR);
+      years.sort((a, b) => b - a);
       const current = yearSelect.value;
       yearSelect.innerHTML = '<option value=\"\">All years</option>';
       years.forEach((y) => {
@@ -255,9 +267,14 @@
         yearSelect.appendChild(opt);
       });
       yearSelect.value = current;
+      if (!yearSelect.value) {
+        const hasCurrent = Array.from(yearSelect.options).some((opt) => opt.value === String(CURRENT_YEAR));
+        if (hasCurrent) yearSelect.value = String(CURRENT_YEAR);
+      }
     };
 
     const monthNames = ["Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"];
+    const CURRENT_YEAR = new Date().getFullYear();
 
     const renderTrend = (records) => {
       const grouped = {};
