--- a/methodology.html
+++ b/methodology.html
@@ -28,8 +28,8 @@
 <body>
   <div class="shell">
     <header class="card">
-      <h1>Methodology & Disclosures</h1>
-      <p class="muted">How CarbonWise calculates Scope 2 electricity emissions, including optional user-declared market-based adjustments.</p>
+      <h1>Methodology & Disclosures (Scope 2 electricity, tCO₂e — location-based + market-based)</h1>
+      <p class="muted">How CarbonWise calculates Scope 2 electricity emissions (tCO₂e), including optional user-declared market-based adjustments.</p>
     </header>
 
     <!-- Scope coverage clarity -->
@@ -88,7 +88,9 @@
     </section>
 
     <footer>
-      <!-- Link placement note: add links from exports, footer, and optionally records to make this visible where results are used -->
+      <!-- Trust signals in footer: methodology, support, and factor freshness -->
+      <div><a href="methodology.html">Methodology</a> • <a href="mailto:hello@esgrise.com">Contact / support</a></div>
+      <div>Emission factors updated as of 2024.</div>
     </footer>
   </div>
 </body>
